hphp/hack/test/typecheck/is_expression/is_vector_access.php.like_types.exp
File "is_vector_access.php", line 5, characters 30-43:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "is_vector_access.php", line 5, characters 30-43:
But got string
File "is_vector_access.php", line 7, characters 10-16:
This is not an object of type KeyedContainer, this is a value of generic type Tv#2 (Typing[4005])
File "rx/interfaces.hhi", line 26, characters 49-50:
Definition is here
